[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/Game/TableTop.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 25.75, 26 )

[node name="TableTop" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 0.667, 0.667 )
shape = SubResource( 9 )

[node name="Inventory" type="Node2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
